批量修改角色说话标签

--- a/OEBPS/Text/c004.xhtml
+++ b/OEBPS/Text/c004.xhtml
@@ -79,7 +79,7 @@
     <p>像期待一样地看了卡的接待本源返回了一样地以男语调露出了吃惊。</p>
     <p>被做那样的反应的话稍微变得不安。</p>
     <p>是到那里厉害的地位吗？</p>
-    <p>“腕力、脚力、耐力、体力，全部等级4以上？</p>
+    <p>“<span class="character">腕力、脚力、耐力、体力，全部等级4以上？</span></p>
     <p><span class="character">再生力等级6？只有魔法力普通2……嗯，这个嘛，突然C等级或者B等级不是很好吗……？”</span></p>
     <p>好歹在好的方向好象可笑。</p>
     <p>虽然不太清楚排名，不过这也和适应强度的工作难易度差不多吧。</p>
