--- a/OEBPS/Text/c008.xhtml
+++ b/OEBPS/Text/c008.xhtml
@@ -77,7 +77,7 @@
     <p>实际上，也有过去称霸了迷宫的seeker带回了宝石和金银财宝这样的例子，不一定是眉唾物。</p>
     <p>seeker们相信迷宫的深处有宝山在沉睡。</p>
     <p></p>
-    <p>“ <span class="character">我雇了三支B级别的著名seeker。</span></p>
+    <p>“<span class="character">我雇了三支B级别的著名seeker。</span></p>
     <p> <span class="character">三者都是四人组成，拥有确实的成绩和经验”</span></p>
     <p></p>
     <p>B等级可以说是平常能雇佣的seeker最好的等级。</p>
@@ -88,12 +88,12 @@
     <p><span class="character">只是好不容易走到最后，力量和道具都用完了的护卫们一个接一个地死去了”</span></p>
     <p></p>
     <p>商人好像想起来了，抱着自己的肩膀颤抖着。</p>
-    <p>“还能去的话就危险了”。最初说这句话的人是谁？</p>
+    <p>“<span class="character">还能去的话就危险了</span>”。最初说这句话的人是谁？</p>
     <p>我们还有余力。所以还能去。</p>
     <p>这样考虑的时候已经是红灯了。如果到了烦恼的地方，就应该坦率地撤退。</p>
     <p>他判断错了。</p>
     <p></p>
-    <p>“ <span class="character">幸存者和我决定马上撤退。</span></p>
+    <p>“<span class="character">幸存者和我决定马上撤退。</span></p>
     <p> <span class="character">但是装了食物的包在逃跑的途中成了重担，快要被追上的时候扔掉了”</span></p>
     <p></p>
     <p>梅赛德斯也不去问有没有带装血液的瓶子了。</p>
