--- a/OEBPS/Text/c021.xhtml
+++ b/OEBPS/Text/c021.xhtml
@@ -37,7 +37,7 @@
     <p>因此，即使知道自己可能是强势的部类，也无法正确把握其差距有多大。</p>
     <p>因此，在这里看菲利克斯的战斗打算测量与别人和自己的差。</p>
     <p>总之，她把菲利克斯当作衡量强度的尺子使用。</p>
-    <p>“老虎。我想问一句，在你眼里菲利克斯算是强人吗？</p>
+    <p>“<span class="character">老虎。我想问一句，在你眼里菲利克斯算是强人吗？</span></p>
     <p>“<span class="character">诶？嗯，是的……我对战斗不是很了解，但是那身姿和以前我雇用的B级别的seeker匹敌</span>”</p>
     <p>梅赛德斯根据Trainu的话来计算自己与菲利克斯的差距。</p>
     <p>在这种情况下，士兵的数量也减少了，最终只剩下菲利克斯一个人了。</p>
@@ -107,17 +107,17 @@
     <p>“<span class="character">喂，黑色的。那样就够了吧，你赢了</span>”</p>
     <p>战斗中听到的声音，贝赛德兽的脸开始动了。</p>
     <p>但是，当得知声音的主人是少女后，气氛变得有些愚蠢了。</p>
-    <p>“小姑娘啊。退下，战斗就是生命的交换……不杀就不会结束。</p>
-    <p>女孩子不知道的世界……不要入内。</p>
-    <p>带着那边的女人们，赶紧离开吧。特别是那里的女人玛吉特母亲的脸色也不好。</p>
-    <p>让他吃有营养的食物，让他们休养就好了”</p>
+    <p>“<span class="character">小姑娘啊。退下，战斗就是生命的交换……不杀就不会结束。</span></p>
+    <p><span class="character">女孩子不知道的世界……不要入内。</span></p>
+    <p><span class="character">带着那边的女人们，赶紧离开吧。特别是那里的女人玛吉特母亲的脸色也不好。</span></p>
+    <p><span class="character">让他吃有营养的食物，让他们休养就好了</span>”</p>
     <p>咦？这家伙意外地是个好家伙吧？梅赛德斯想。</p>
     <p>看来他有他的战斗美学，即他不想对女人出手。</p>
     <p>就算是魔物，有这种矜持的人也会有好感。</p>
     <p>如果是平常的话，在这里，就顺口说了吧……但是，现在梅赛德斯还是接受了妹妹的请求而行动着。所以不能退。</p>
     <p>“<span class="character">听啊。用力打退看看</span>”</p>
     <p>“<span class="character">小丫头……如果认为是女人就不会被攻击的话，那就错了</span>”</p>
-    <p>“托您的福很好。来！</p>
+    <p>“<span class="character">托您的福很好。来！</span></p>
     <p>“<span class="character">……愚蠢的人</span>”</p>
     <p>血管浮动在贝赛德兽的额头，豪腕被梅赛德斯甩下。</p>
     <p>但是，梅赛德斯从口袋里伸出左臂，轻易地接住了贝赛德兽的手臂。</p>
