--- a/OEBPS/Text/c022.xhtml
+++ b/OEBPS/Text/c022.xhtml
@@ -50,7 +50,7 @@
     <p>你打算干什么？事到如今还叫我孩子什么的……。</p>
     <p>不，这本身并不奇怪。多年被搁置不管，梅赛德斯作为他的孩子的事实不变，那样称呼的权利在他有。</p>
     <p>但是现在突然这么说，梅赛德斯只感到毛骨悚然。</p>
-    <p>“所谓宝石就是从意想不到的地方出来的。</p>
+    <p>“<span class="character">所谓宝石就是从意想不到的地方出来的。</span></p>
     <p>他因严格挑选血统、实施彻底教育的菲利克斯的无能而感到无能为力。</p>
     <p>考虑着应该再一次做孩子，到适合继任者的人出现为止等候。</p>
     <p>哎呀哎呀，不是认为是侧室的孩子侮辱的东西。应该更早注意到的。</p>
@@ -59,18 +59,18 @@
     <p>那简直就像是把梅赛德斯以外的人当作小孩子一般的语气。</p>
     <p>简直就像只有梅赛德斯才是自己的孩子一样。</p>
     <p>连菲利克斯也包括在内，完全无视其他孩子们的样子……这句话让人感到异常。</p>
-    <p>“后继者是菲利克斯……我记得是哥哥。</p>
-    <p>如果有时间在意我的话，不应该担心哥哥吗？”</p>
-    <p>“不，不对。你没有哥哥。</p>
-    <p>如果你的哥哥……要是我的孩子，会那样难看吗？</p>
-    <p>那叫我的孩子太淡血了”</p>
+    <p>“<span class="character">后继者是菲利克斯……我记得是哥哥。</span></p>
+    <p><span class="character">如果有时间在意我的话，不应该担心哥哥吗？</span>”</p>
+    <p>“<span class="character">不，不对。你没有哥哥。</span></p>
+    <p><span class="character">如果你的哥哥……要是我的孩子，会那样难看吗？</span></p>
+    <p><span class="character">那叫我的孩子太淡血了</span>”</p>
     <p>伯恩哈特瞥见了菲利克斯和玻利斯，用轻蔑的眼光看向了他。</p>
     <p>这很明显不是父亲对儿子的，而是足以让人确信包括正妻的女性在内没有任何感情。</p>
     <p>因为不优秀不是我的孩子。因为长得难看，所以没有继承自己的血统。他是这么说的。</p>
     <p>除了梅赛德斯之外的所有人都对这种扭曲无言以对，他的话还在继续。</p>
-    <p>“重视血统。虽然比我逊色，但我期待着如果是有贵血统的女人，能否为我的血留下深色的孩子。</p>
-    <p>但是出生的孩子并没有让我吃惊的继承了我的血统，不管投入多少钱来教育我都不敢靠近。</p>
-    <p>我失望了……还考虑了再一次严格挑选母体从头开始”</p>
+    <p>“<span class="character">重视血统。虽然比我逊色，但我期待着如果是有贵血统的女人，能否为我的血留下深色的孩子。</span></p>
+    <p><span class="character">但是出生的孩子并没有让我吃惊的继承了我的血统，不管投入多少钱来教育我都不敢靠近。</span></p>
+    <p><span class="character">我失望了……还考虑了再一次严格挑选母体从头开始</span>”</p>
     <p>（这家伙……当着本人超脱）</p>
     <p>对完全没有选择语言的父亲，梅赛德斯感到了一些不愉快。</p>
     <p>菲利克斯和他的母亲，对于梅赛德斯来说都是陌生人。</p>
@@ -79,10 +79,10 @@
     <p>精力充沛，不要说很过分的话，只是觉得很可怜罢了。不会抱着发自内心的愤怒和悲哀。</p>
     <p>如果为了陌生人而真心发怒、哭泣的话，那个人一定是个好人，但梅赛德斯却不同。</p>
     <p>但是，即使是这样的她，也只能哀叹被伯恩哈特这样说的正妻和菲利克斯。</p>
-    <p>“但是，在只觉得这无意义的宴会上我发现了。</p>
-    <p>继承了我最浓的血液，和我一样的存在。</p>
-    <p>啊，我现在很高兴。拥有孩子的父母的喜悦难道就是这样的吗？</p>
-    <p>第一次见面啊……我的孩子啊”</p>
+    <p>“<span class="character">但是，在只觉得这无意义的宴会上我发现了。</span></p>
+    <p><span class="character">继承了我最浓的血液，和我一样的存在。</span></p>
+    <p><span class="character">啊，我现在很高兴。拥有孩子的父母的喜悦难道就是这样的吗？</span></p>
+    <p><span class="character">第一次见面啊……我的孩子啊</span>”</p>
     <p>“<span class="character">……至今为止一起度过的妻子和孩子的爱没有吗？</span>”</p>
     <p>“<span class="character">这是不可思议的事情。你自己不明白的东西，问我吗？</span>”</p>
     <p>梅赛德斯听到伯恩哈特的话不禁屏住了呼吸。</p>
@@ -109,23 +109,23 @@
     <p>没有享受事物的才能··。</p>
     <p>梅赛德斯·格鲁内瓦特在作为人重要的东西诞生的同时……不，从出生的前世开始一直欠缺着。</p>
     <p>她绝对不会成为满月，是扭曲残缺的月亮。</p>
-    <p>“同样，我们是。是所说的情之类不确实弱的东西的强者。</p>
-    <p>我看到你的眼睛的时候我就想。</p>
-    <p>啊啊，第一次见到和我有着相同心情的理解者”</p>
+    <p>“<span class="character">同样，我们是。是所说的情之类不确实弱的东西的强者。</span></p>
+    <p><span class="character">我看到你的眼睛的时候我就想。</span></p>
+    <p><span class="character">啊啊，第一次见到和我有着相同心情的理解者</span>”</p>
     <p>虽然梅赛德斯无言，但在心中却是赞同的。</p>
     <p>的确，梅赛德斯也陷入了一种错觉，就好像看到伯恩哈特时看到了镜子一样。</p>
     <p>这个男人是自己的同类，用本能理解了。</p>
     <p>虽然是令人讨厌的事情，但因为本来就很像，而且还继承了血缘吧。</p>
     <p>不得不承认，梅赛德斯和伯恩哈特是父女。</p>
-    <p>“今后一起生活吧，我的孩子啊。</p>
-    <p>你才是我所寻求的、我的继承人”</p>
-    <p>“像这样突然被退回手掌，我答应它吗？</p>
-    <p>到现在为止一直被父亲抛弃的孩子不反抗的话，为什么会觉得不可思议呢”</p>
-    <p>“我说过吧，你和我一样。</p>
-    <p>你并没有对我抱有反抗心。只是假装抱着。</p>
-    <p>因为你从一开始就不追求父母的爱。因为没有寻求，所以不会对没有被给予的事生气。</p>
-    <p>而且你一定牵着我的手。为什么这么说呢，这是因为他们只考虑牵手的好处和不拿手的坏处。你不会把感情之类的东西夹在那里。</p>
-    <p>你最后肯定会选择利的”</p>
+    <p>“<span class="character">今后一起生活吧，我的孩子啊。</span></p>
+    <p><span class="character">你才是我所寻求的、我的继承人</span>”</p>
+    <p>“<span class="character">像这样突然被退回手掌，我答应它吗？</span></p>
+    <p><span class="character">到现在为止一直被父亲抛弃的孩子不反抗的话，为什么会觉得不可思议呢</span>”</p>
+    <p>“<span class="character">我说过吧，你和我一样。</span></p>
+    <p><span class="character">你并没有对我抱有反抗心。只是假装抱着。</span></p>
+    <p><span class="character">因为你从一开始就不追求父母的爱。因为没有寻求，所以不会对没有被给予的事生气。</span></p>
+    <p><span class="character">而且你一定牵着我的手。为什么这么说呢，这是因为他们只考虑牵手的好处和不拿手的坏处。你不会把感情之类的东西夹在那里。</span></p>
+    <p><span class="character">你最后肯定会选择利的</span>”</p>
     <p>……这也是图星。</p>
     <p>梅赛德斯确实完全没有感觉到对父亲的愤怒。</p>
     <p>因为正如他所说，从一开始就没有追求过爱。</p>
@@ -145,10 +145,10 @@
     <p>这个判断应该没有任何错误。为什么这么说呢，因为这绝对是有利的工作。</p>
     <p>与其勉强制造敌人，不如利用这个男人。硬要接受这个邀请，以此来改善对母亲和妹妹的待遇。那样绝对正确。</p>
     <p>…………应该是正确的……。</p>
-    <p>“……原来如此，你说得对，父亲大人。</p>
-    <p>我确实像你的女儿。思维相似到让人讨厌的地步。</p>
-    <p>本来打算马上离开这个城市……我也还年幼。稍微在这座城市里静下心来努力钻研，从结果上来说，将会带来美好的未来。</p>
-    <p>哦，我承认。你的提案对我来说太轻浮了。我会利用你的，父亲”</p>
+    <p>“<span class="character">……原来如此，你说得对，父亲大人。</span></p>
+    <p><span class="character">我确实像你的女儿。思维相似到让人讨厌的地步。</span></p>
+    <p><span class="character">本来打算马上离开这个城市……我也还年幼。稍微在这座城市里静下心来努力钻研，从结果上来说，将会带来美好的未来。</span></p>
+    <p><span class="character">哦，我承认。你的提案对我来说太轻浮了。我会利用你的，父亲</span>”</p>
     <p>梅赛德斯的这句话，除了伯恩哈特之外的人都吓了一跳。</p>
     <p>虽然语调还是很礼貌，但梅赛德斯来到这里后完全停止了给猫戴帽子的行为，并堂堂正正地对父亲说了要利用它。</p>
     <p>但是，伯恩哈特并没有伤害到他的心情，反而笑得很开心。</p>
