--- a/OEBPS/Text/c024.xhtml
+++ b/OEBPS/Text/c024.xhtml
@@ -137,11 +137,11 @@
     <p>“<span class="character">……</span>”</p>
     <p>父亲走向僵硬的梅赛德斯，啪的一声把手放在她的头上。</p>
     <p>并且不自然的那样和善地抚摸女儿的事。</p>
-    <p>“冷静点。如果能做到这一点，你将到达更高的高度。</p>
-    <p>——下次要注意了”</p>
+    <p>“<span class="character">冷静点。如果能做到这一点，你将到达更高的高度。</span></p>
+    <p><span class="character">——下次要注意了</span>”</p>
     <p>“<span class="character">……知道了，父亲</span>”</p>
-    <p>“好啊。那就吃晚餐吧。</p>
-    <p>除了故意受到的一击以外，几乎是满分。今晚我会告诉厨师多准备你喜欢的东西”</p>
+    <p>“<span class="character">好啊。那就吃晚餐吧。</span></p>
+    <p><span class="character">除了故意受到的一击以外，几乎是满分。今晚我会告诉厨师多准备你喜欢的东西</span>”</p>
     <p>伯恩哈特高兴地离开了。</p>
     <p>此后他的部下们也继续，后边只有梅赛德斯被留下。</p>
     <p>她站在科俄姆的中央，俯视着滚动的尸体。</p>
