--- a/OEBPS/Text/c027.xhtml
+++ b/OEBPS/Text/c027.xhtml
@@ -34,20 +34,20 @@
     <p>梅赛德斯看到教师后，直觉地意识到他是相当有实力的人。</p>
     <p>恐怕比本凯还要高级吧。</p>
     <p>如果自己也是一对一的话，不知道能不能赢。他感受到了如此强大。</p>
-    <p>“接下来一年，我将担任你们的古斯塔夫·波尔特。</p>
-    <p>不过，明年我担当你们还是要看你们的努力。</p>
-    <p>今天简单地说明了一年的流程，之后请全体人员做自我介绍”</p>
+    <p>“<span class="character">接下来一年，我将担任你们的古斯塔夫·波尔特。</span></p>
+    <p><span class="character">不过，明年我担当你们还是要看你们的努力。</span></p>
+    <p><span class="character">今天简单地说明了一年的流程，之后请全体人员做自我介绍</span>”</p>
     <p>教师——古斯塔夫自报姓名教室里一片嘈杂。</p>
     <p>看来是比较有名的名人。</p>
     <p>古斯塔夫不顾这些学生，早早地开始了说明。</p>
-    <p>“一年分为前期和后期。</p>
-    <p>前期和后期分别设有笔试和实际技巧考试。</p>
-    <p>考试后有长假。利用这个假期磨练自己、腐朽全看你们了”</p>
+    <p>“<span class="character">一年分为前期和后期。</span></p>
+    <p><span class="character">前期和后期分别设有笔试和实际技巧考试。</span></p>
+    <p><span class="character">考试后有长假。利用这个假期磨练自己、腐朽全看你们了</span>”</p>
     <p>虽然说法有些绕圈子，但总而言之，那些因为放假而偷懒的家伙等于明年就消失了。</p>
     <p>学生们也紧张奔跑，刚才的嘈杂象谎言一样地集中着话。</p>
-    <p>“夏季有狩猎祭，冬季有武艺祭。</p>
-    <p>虽然不会直接影响成绩，但有兴趣的话可以出去看看。</p>
-    <p>那么，请全体人员做自我介绍吧”</p>
+    <p>“<span class="character">夏季有狩猎祭，冬季有武艺祭。</span></p>
+    <p><span class="character">虽然不会直接影响成绩，但有兴趣的话可以出去看看。</span></p>
+    <p><span class="character">那么，请全体人员做自我介绍吧</span>”</p>
     <p class="divline"></p>
     <p>自我介绍结束后，当天就结束了。</p>
     <p>梅赛德斯朝着分配给自己的宿舍室确认门前的号码。</p>
@@ -62,8 +62,8 @@
     <p>少女一看到梅赛德斯，脸上露出了笑容。</p>
     <p>是水色的头发，可爱的脸立的少女。</p>
     <p>头发分成两组，给人以幼稚的印象。</p>
-    <p>“是同住一间房间的人吗？我是汉纳汉堡包。从尼贝尔银行来的。</p>
-    <p>请多关照”</p>
+    <p>“<span class="character">是同住一间房间的人吗？我是汉纳汉堡包。从尼贝尔银行来的。</span></p>
+    <p><span class="character">请多关照</span>”</p>
     <p>听到少女的名字，梅赛德斯想象着少女被夹在裤子里变成汉堡的样子。</p>
     <p>当然，汉堡包并不代表这个意思，但是不知不觉联想到这样的事情是前世的影响吧。</p>
     <p>……那么说来在这个世界没看过汉堡包。如果在三角洲附近提供点子的话，可能会卖得很好。</p>
@@ -101,8 +101,8 @@
     <p>从五岁起就一直反复修行，能学到的知识只有房子里的书。</p>
     <p>因此，梅赛德斯的知识有些偏颇。</p>
     <p>至少街头巷尾有名的人物啦最近的流行啦，那样的东西完全不知道。</p>
-    <p>“你不知道吗？英雄古斯塔夫……他是在八十年前与兽人西米勒的战争中大显身手的人。</p>
-    <p>拯救国家，向当时的国王向公主求婚的逸事”</p>
+    <p>“<span class="character">你不知道吗？英雄古斯塔夫……他是在八十年前与兽人西米勒的战争中大显身手的人。</span></p>
+    <p><span class="character">拯救国家，向当时的国王向公主求婚的逸事</span>”</p>
     <p>“<span class="character">简直就是故事的主人公</span>”</p>
     <p>“<span class="character">是啊。实际上也有以老师为主角的戏剧。当然并不是老师本人出场，而是演员本人出演的</span>”</p>
     <p>而且看来，古斯塔夫是相当有名的人物。</p>
