--- a/OEBPS/Text/c034.xhtml
+++ b/OEBPS/Text/c034.xhtml
@@ -19,19 +19,19 @@
     <p>走了一会儿，大型犬大小的蜥蜴一样的魔物出现了。</p>
     <p>眼睛水灵灵的，无意义的可爱。</p>
     <p>乍一看似乎没有歹意。</p>
-    <p>“真是格古罗斯啊。只要我们不攻击，基本就不会袭击。</p>
-    <p>因为会吃有害虫子，所以有时会故意放置在街上用来打扫街道”</p>
+    <p>“<span class="character">真是格古罗斯啊。只要我们不攻击，基本就不会袭击。</span></p>
+    <p><span class="character">因为会吃有害虫子，所以有时会故意放置在街上用来打扫街道</span>”</p>
     <p>正如吉克哈特的说明所说，完全没有要袭击的迹象。</p>
     <p>简直就像是梅赛德斯他们没有在眼里一样贴在岩壁上移动着。</p>
     <p>如果不来的话，就没有必要理睬对方，梅赛德斯等人也无视了格古罗斯们向前进。</p>
     <p>稍微前进了一下，这次来到了有许多绿色的人型生物的地方。</p>
     <p>身高大概和梅赛德斯一样吧。眼睛很红，肚子很疼，身体不紧张。</p>
-    <p>“那个是蟑螂。在小妖精种子中是最弱最胆小的。</p>
-    <p>虽然基本上不会从迷宫里出来，但有时也会被其他人赶出来。</p>
-    <p>虽然在哥布林中属于无害的部类，但对于进入自己住所的人会产生攻击性”</p>
+    <p>“<span class="character">那个是蟑螂。在小妖精种子中是最弱最胆小的。</span></p>
+    <p><span class="character">虽然基本上不会从迷宫里出来，但有时也会被其他人赶出来。</span></p>
+    <p><span class="character">虽然在哥布林中属于无害的部类，但对于进入自己住所的人会产生攻击性</span>”</p>
     <p>“<span class="character">真不愧是吉克哈特大人。你很了解啊</span>”</p>
-    <p>“没什么了不起的。调查了谁都知道。</p>
-    <p>……看来，我们被认定为敌人了。我会来的”</p>
+    <p>“<span class="character">没什么了不起的。调查了谁都知道。</span></p>
+    <p><span class="character">……看来，我们被认定为敌人了。我会来的</span>”</p>
     <p>哥布林尼特的数量是四体。</p>
     <p>那个发出怪声，威胁着梅赛德斯们。</p>
     <p>可是因为与声音的大小相反，弯腰没有魄力。</p>
@@ -52,8 +52,8 @@
     <p>但是梅赛德斯抓住他的脖子，任凭握力将他的脖子骨头砸碎。不用说使用武器。</p>
     <p>就那样随意地丢弃，看周围。</p>
     <p>总之好像没有其他敌人。</p>
-    <p>“呵呵呵！大概就是这样！</p>
-    <p>怎么样，吉克哈特大人，看我的活跃吧？”</p>
+    <p>“<span class="character">呵呵呵！大概就是这样！</span></p>
+    <p><span class="character">怎么样，吉克哈特大人，看我的活跃吧？</span>”</p>
     <p>“<span class="character">啊，真漂亮。其他两个人也无可挑剔</span>”</p>
     <p>多德被吉克哈特表扬得红着脸，得意地挺起胸膛。</p>
     <p>知道吉克哈特真正的性别的梅赛德斯，觉得德多有点可怜。</p>
@@ -86,9 +86,9 @@
     <p>然后挥动哈尔伯特再飞过两人的脖子，一个人硬要活下去。</p>
     <p>吐信息一个人也好，如果是吸血鬼的话只上半身也不会马上死掉。</p>
     <p>像爬山虎一样爬着，男子哑然地抬头看梅赛德斯。</p>
-    <p>“き、貴様……果然是旧王派的使者啊……。</p>
-    <p>年龄也和外表不符……！</p>
-    <p>疏忽……居然有你这样的老王派……而且，居然还隐瞒了这样的存在……”</p>
+    <p>“<span class="character">き、貴様……果然是旧王派的使者啊……。</span></p>
+    <p><span class="character">年龄也和外表不符……！</span></p>
+    <p><span class="character">疏忽……居然有你这样的老王派……而且，居然还隐瞒了这样的存在……</span>”</p>
     <p>“<span class="character">不凑巧，这个推理不合逻辑。我不是旧王派，年龄也……嗯，正如你所看到的那样</span>”</p>
     <p>包括转生前在内，虽然都是年龄欺诈，但说起作为梅赛德斯而生活的年月，和外表并没有什么差别。</p>
     <p>总之，有必要先从这个男的口中问出情报，但是即使普通的询问也不会回答。</p>
@@ -96,7 +96,7 @@
     <p>“<span class="character">茨瓦尔夫。我想从这些人那里听到一些信息，有什么好的方法吗？</span>”</p>
     <p>“<span class="character">哥布林赫克斯可以使用催眠魔法。这样能听到吗？</span>”</p>
     <p>“<span class="character">好。那么现在马上生产一体哥布林赫克斯，给我拿出来</span>”</p>
-    <p>《YES，主人》</p>
+    <p>《<span class="character">YES，主人</span>》</p>
     <p>说完话过了一会儿，哈尔巴德中出现了戴着黑色食物的蟑螂。</p>
     <p>手里拿着拐杖，就像魔法师一样出场。</p>
     <p>他伸出手杖，在白色装束上施加魔法。</p>
@@ -106,8 +106,8 @@
     <p>外表阴沉,不过，说不定意外地是气好的蟑螂。</p>
     <p>梅赛德斯抓住男人的头发，提了个问题。</p>
     <p>“<span class="character">你们是什么人？为什么要瞄准吉克哈特</span>”</p>
-    <p>“我们……贝亚特里克斯帝国的……隐密部队……。</p>
-    <p>在巡回演出中，唯一一个继承了初代王血统的正当继承者——吉克林德公主……消失的话……在巡回演出中，没有人能熟练使用“王剑”……我国处于优势……为此，我们来了……”</p>
+    <p>“<span class="character">我们……贝亚特里克斯帝国的……隐密部队……。</span></p>
+    <p><span class="character">在巡回演出中，唯一一个继承了初代王血统的正当继承者——吉克林德公主……消失的话……在巡回演出中，没有人能熟练使用“王剑”……我国处于优势……为此，我们来了……</span>”</p>
     <p>果然如此，梅赛德斯皱起了眉头。</p>
     <p>吉克哈特的原形是吉克林德公主，是正当王家的继承者。</p>
     <p>总之这个隐密集体不是瞄准了吉克哈特第五王子，也不是被影武者欺骗，知道原形之后瞄准着吉克林德公主。</p>
