--- a/OEBPS/Text/c035.xhtml
+++ b/OEBPS/Text/c035.xhtml
@@ -34,8 +34,8 @@
     <p>泄露情报的不是别人，而是这个国家的王者自身。</p>
     <p>而且，吉克哈特才是真正的王族。</p>
     <p>中途还是静静地听着的吉克哈特,不过，用被说了自己的原形的部分显出了眼动摇。</p>
-    <p>“愚蠢的……我真的是王族？不可能那样。</p>
-    <p>我是孤儿，为了成为王子的影子而被养大……一直以来，都被这样听到……”</p>
+    <p>“<span class="character">愚蠢的……我真的是王族？不可能那样。</span></p>
+    <p><span class="character">我是孤儿，为了成为王子的影子而被养大……一直以来，都被这样听到……</span>”</p>
     <p>“<span class="character">你告诉我那头发的颜色是什么？</span>”</p>
     <p>“<span class="character">头发是……为了成为影子，在婴儿时期就用魔法染上了</span>”</p>
     <p>虽然和预想的一样，但她好像还是不知道自己是真正的王族。</p>
@@ -47,29 +47,29 @@
     <p>他是一个把孩子称作失败作品的鬼畜，尽管如此，他还是没有撒谎说什么是孤儿。</p>
     <p>“<span class="character">那个……你说要相信吗……</span>”</p>
     <p>“<span class="character">难以置信也不是没有道理的</span>”</p>
-    <p>“不，不对。不对。并不是不相信。</p>
-    <p>这么说来，有些地方让人难以理解……即使是我，也并不是没有任何不协调感。</p>
-    <p>但是……即使突然被说成是王族，也不能马上被吞下。</p>
-    <p>什么……什么都行。没有证据之类的东西吗？”</p>
+    <p>“<span class="character">不，不对。不对。并不是不相信。</span></p>
+    <p><span class="character">这么说来，有些地方让人难以理解……即使是我，也并不是没有任何不协调感。</span></p>
+    <p><span class="character">但是……即使突然被说成是王族，也不能马上被吞下。</span></p>
+    <p><span class="character">什么……什么都行。没有证据之类的东西吗？</span>”</p>
     <p>吉克哈特压着头，痛苦地说。</p>
     <p>她会以自己的方式面对现实，看清正确的答案吧。</p>
     <p>但是没有任何根据就接受现实太沉重，是想要值得相信的东西吗？</p>
     <p>考虑到11岁这个年龄，这里混乱不叫也挺了不起的。</p>
-    <p>“王剑……能使用迷宫主人钥匙的只有初代王的血族。</p>
-    <p>拿到它就能知道真相”</p>
+    <p>“<span class="character">王剑……能使用迷宫主人钥匙的只有初代王的血族。</span></p>
+    <p><span class="character">拿到它就能知道真相</span>”</p>
     <p>“<span class="character">连王剑的事都知道吗……</span>”</p>
     <p>“<span class="character">从父亲那里听到的</span>”</p>
-    <p>“这样啊。但是王剑在城堡的宝库里被严格保管。说让我摸一摸，所以没必要坦率地听我说吧。</p>
-    <p>如果想要确认的话，除非是偷偷潜入……”</p>
+    <p>“<span class="character">这样啊。但是王剑在城堡的宝库里被严格保管。说让我摸一摸，所以没必要坦率地听我说吧。</span></p>
+    <p><span class="character">如果想要确认的话，除非是偷偷潜入……</span>”</p>
     <p>吉克哈特……不，吉克林德触摸了王剑。</p>
     <p>那是现王最应该避免的事态吧。首先，即使从正面拜托，像影武者一样的人肯定会被一脚踹开。</p>
     <p>那么方法只有一个。只有潜入确认。</p>
     <p>但是梅赛德斯并没有强行要求梅赛德斯。</p>
     <p>结果当事人还是她。只是局外人的自己怎么说，本人没有干劲就没有意义。</p>
     <p>所以，梅赛德斯只是在背后推一把。我不会再做了。</p>
-    <p>“是前进还是停止。决定那个的是你。</p>
-    <p>在这里停下脚步就可以了。我也只是从这件事开始罢了。</p>
-    <p>但是如果说为了寻找真实而前进的话……”</p>
+    <p>“<span class="character">是前进还是停止。决定那个的是你。</span></p>
+    <p><span class="character">在这里停下脚步就可以了。我也只是从这件事开始罢了。</span></p>
+    <p><span class="character">但是如果说为了寻找真实而前进的话……</span>”</p>
     <p>梅赛德斯看着吉克哈特的眼睛。</p>
     <p>如果在这里移开视线逃跑的话，就到此为止了。</p>
     <p>没有前进的意志的人，是无法开辟道路的。</p>
@@ -78,9 +78,9 @@
     <p>“但是！你没有做到那种地步的优点！</p>
     <p>假设这是真的，你何必冒险到那种地步！</p>
     <p>为什么，会做到那种程度呢！”</p>
-    <p>“这个国家很荒芜，学园里总是有奇怪的家伙，对我来说有害。</p>
-    <p>如果国家安定，学园能和平，那对我来说是很有利的。</p>
-    <p>不该做的事赶快解决，专心致志地做学业”</p>
+    <p>“<span class="character">这个国家很荒芜，学园里总是有奇怪的家伙，对我来说有害。</span></p>
+    <p><span class="character">如果国家安定，学园能和平，那对我来说是很有利的。</span></p>
+    <p><span class="character">不该做的事赶快解决，专心致志地做学业</span>”</p>
     <p>这是真心实意。</p>
     <p>结果，梅赛德斯考虑到自己的利益而行动。</p>
     <p>决不是以情感或温柔来行动。</p>
@@ -93,14 +93,14 @@
     <p>以前挑唆了玻利斯，迷宫攻略者。</p>
     <p>而且如果是那样的话，对于梅赛德斯来说不是可以置之不理的问题。</p>
     <p>现状，能正确认识那个威胁的只有梅赛德斯。</p>
-    <p>“选择的是你，吉克哈特……不，是吉克林德公主。</p>
-    <p>但是前进的话——我会保护你。不管发生什么事情，我都不让别人碰你一根手指”</p>
+    <p>“<span class="character">选择的是你，吉克哈特……不，是吉克林德公主。</span></p>
+    <p><span class="character">但是前进的话——我会保护你。不管发生什么事情，我都不让别人碰你一根手指</span>”</p>
     <p>吉克哈特吃惊地睁开眼睛，然后脸颊稍微发红。</p>
     <p>什么呀，那个反应是？为什么会在那里害羞？</p>
-    <p>“那个……不可思议啊。和你说话的时候，感觉不到在和女孩子说话。</p>
-    <p>非常可靠吗……是不是有男子气概…………女孩子，是什么呢？”</p>
-    <p>“至少比起身着男装的美丽的你，我更想做一个女孩子……。</p>
-    <p>或者说那个相当普通地受伤。被说惯了吧”</p>
+    <p>“<span class="character">那个……不可思议啊。和你说话的时候，感觉不到在和女孩子说话。</span></p>
+    <p><span class="character">非常可靠吗……是不是有男子气概…………女孩子，是什么呢？</span>”</p>
+    <p>“<span class="character">至少比起身着男装的美丽的你，我更想做一个女孩子……。</span></p>
+    <p><span class="character">或者说那个相当普通地受伤。被说惯了吧</span>”</p>
     <p>主要是前世。</p>
     <p>最后一句话没有说出来，梅赛德斯小声地叹了一口气。</p>
     <p>“<span class="character">啊，啊，对不起。我绝对不会把你当傻瓜的</span>”</p>
@@ -108,29 +108,28 @@
     <p>耸起肩膀，说着逗人发笑。</p>
     <p>我知道你没有恶意，而且还是小孩子的话。</p>
     <p>因为这样的事一一发火，在社会上是做不到的。</p>
-    <p>“知道了……我也下定决心吧。</p>
-    <p>如果那话是真的，是国家的一大事。不能逃避”</p>
+    <p>“<span class="character">知道了……我也下定决心吧。</span></p>
+    <p><span class="character">如果那话是真的，是国家的一大事。不能逃避</span>”</p>
     <p>吉克哈特握着拳头，坚定了决心地看了梅赛德斯。</p>
     <p>被坦率地认为是强的瞳孔。</p>
     <p>没有目的，为了寻找生存的目的而活着的梅赛德斯，那里有着强烈的意志之光。</p>
-    <p>“学园里恐怕会有人看守你。</p>
-    <p>否则时机到那种地步，不能只盯着自己一个人的地方。</p>
-    <p>谁有线索吗？”</p>
+    <p>“<span class="character">学园里恐怕会有人看守你。</span></p>
+    <p><span class="character">否则时机到那种地步，不能只盯着自己一个人的地方。</span></p>
+    <p><span class="character">谁有线索吗？</span>”</p>
     <p>“<span class="character">……正如你所说，如果现王家想排除我的话，有一个人会认为是被排除的</span>”</p>
     <p>根据梅赛德斯的预测，监视吉克哈特的人应该在身边。</p>
     <p>否则，那个野外课上阿修塔尔出现的时机是无法说明的。</p>
     <p>如果说清楚的话，梅赛德斯认为A班的谁是内行者。</p>
-    <p>“我之所以来这所学校，是因为有人在瞄准第五王子，我受命要将其引诱出来抓住。</p>
-    <p>除饰演诱饵的我之外，还有一个人为了捕捉敌人而潜入了这所学校”</p>
+    <p>“<span class="character">我之所以来这所学校，是因为有人在瞄准第五王子，我受命要将其引诱出来抓住。</span></p>
+    <p><span class="character">除饰演诱饵的我之外，还有一个人为了捕捉敌人而潜入了这所学校</span>”</p>
     <p>吉克哈特就这么说了，有点难开口地闭上了嘴。</p>
     <p>你一定相信了吧。</p>
     <p>不，现在可能还有这样的心情。</p>
-    <p>“……但是，如果按你说的去做，就会从前提上推翻。</p>
-    <p>如果王家是我的敌人，那么接受王家的命令来到学校的她，也会成为敌人……“也许……”</p>
+    <p>“<span class="character">……但是，如果按你说的去做，就会从前提上推翻。</span></p>
+    <p><span class="character">如果王家是我的敌人，那么接受王家的命令来到学校的她，也会成为敌人……也许……</span>”</p>
     <p>“<span class="character">名字是？</span>”</p>
     <p>“<span class="character">那个人……名叫汉娜。和你同室的那个少女</span>”</p>
     <p>而那就是梅赛德斯认为现状最可疑的同居人。</p>
-    
 </body>
 
 </html>
