--- a/OEBPS/Text/c036.xhtml
+++ b/OEBPS/Text/c036.xhtml
@@ -62,12 +62,12 @@
     <p>“<span class="character">有什么建议吗？</span>”</p>
     <p>“<span class="character">恩。这次有作为第一王子的巴尔杜尔的生日祭，可能会在那里动摇那些家伙</span>”</p>
     <p>“<span class="character">这么说？</span>”</p>
-    <p>“曾经王家在王子和公主的生日时必定会表演王剑，并在贵族们面前使用王剑。</p>
-    <p>……当然，这是清除迷宫的报酬，只有一部分贵族知道。</p>
-    <p>大部分人只知道王剑拥有召唤魔物操纵的力量。</p>
-    <p>由于在观众面前使用王剑的事显示作为王的血统的事，同时也成为力量的展示，增强着向心。</p>
-    <p>但是成为现在的王后一次也没有去过。</p>
-    <p>因为这个原因，贵族们开始怀疑现在的王”</p>
+    <p>“<span class="character">曾经王家在王子和公主的生日时必定会表演王剑，并在贵族们面前使用王剑。</span></p>
+    <p><span class="character">……当然，这是清除迷宫的报酬，只有一部分贵族知道。</span></p>
+    <p><span class="character">大部分人只知道王剑拥有召唤魔物操纵的力量。</span></p>
+    <p><span class="character">由于在观众面前使用王剑的事显示作为王的血统的事，同时也成为力量的展示，增强着向心。</span></p>
+    <p><span class="character">但是成为现在的王后一次也没有去过。</span></p>
+    <p><span class="character">因为这个原因，贵族们开始怀疑现在的王</span>”</p>
     <p>众所周知，现在的王妃没有继承王家的血统。</p>
     <p>可是，王宣布了孩子们是跟前的王妃之间的孩子，是正当的王族。</p>
     <p>所以他们还能坐上王座。</p>
