--- a/OEBPS/Text/c025.xhtml
+++ b/OEBPS/Text/c025.xhtml
@@ -23,9 +23,9 @@
     <p>最初从威容买吸血鬼们的警戒的他,不过，近一年完全与常客化做了。</p>
     <p>“<span class="character">大将，今天也来了吗！</span>”</p>
     <p>“<span class="character">恩。里面有什么好东西吗？</span>”</p>
-    <p>“那这家伙怎么样？这是深夜刚送到的新鲜猪人。</p>
-    <p>这家伙和平时在迷宫里被捉到的家伙不同，是在迷宫外被抓到的家伙。</p>
-    <p>饱食着树的果实和水果，肉也比普通的猪人更柔软、甜美！很划算哦！”</p>
+    <p>“<span class="character">那这家伙怎么样？这是深夜刚送到的新鲜猪人。</span></p>
+    <p><span class="character">这家伙和平时在迷宫里被捉到的家伙不同，是在迷宫外被抓到的家伙。</span></p>
+    <p><span class="character">饱食着树的果实和水果，肉也比普通的猪人更柔软、甜美！很划算哦！</span>”</p>
     <p>“<span class="character">好啊。买吧</span>”</p>
     <p>“<span class="character">谢谢惠顾！</span>”</p>
     <p>买店主推荐的橡皮肉，再转几个店买齐食材。</p>
